# relay

./: .env.beta.example  .env.example  .gitignore  .pre-commit-config.yaml  .reorganize_plan.txt  AGENT_AND_MODEL_GUIDE.md  AGENT_AUDIT_FINDINGS_2025_11_02.md  AGENT_BUILD_COMPLETION_SUMMARY.md  AGENT_ORCHESTRATION_IMPLEMENTATION.md  AGENT_ORCHESTRATION_PROTOCOL.md  AGENT_REVIEW_FINDINGS_SUMMARY.md  AI_VERIFICATION_PROMPT_RELAY_2025-11-16.md  API_KEYS_MANAGEMENT.md  ARCHITECTURAL_DECISION_RATE_LIMITS_AND_TASK_D.md  AUDIT_DELIVERABLES.txt  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_INDEX_2025-11-15.md  AUDIT_RESULTS_2025-11-15.txt  BETA_DEPLOYMENT_ACTION_PLAN.md  BETA_LAUNCH_CHECKLIST.md  CANARY_DEVOPS_COORDINATION.md  CANARY_EXECUTION_LIVE.md  CHANGELOG.md  CHATGPT_LAUNCH_PROMPT.md  CHATGPT_MEMORY_REPO_GUARDIAN.md  COMMIT_REPORT_R2_PHASE2_IMPLEMENTATION.md  COMPLETION_REPORT.txt  COST_ANALYSIS_DELIVERY_SUMMARY.md  COST_ANALYSIS_INDEX.md  COST_OPTIMIZATION_ACTION_PLAN.md  CREDENTIAL_ROTATION_PLAN.md  CURRENT_STATE_SNAPSHOT.md  ChatGPTClaudeCodeRelayAgentGuide.MD  DELIVERABLES_MEMORY_REVIEW.txt  DEPLOYMENT_AUTOMATION_COMPLETE.md  DEPLOYMENT_CHECKLIST_S60_PHASE2_2.txt  DEPLOYMENT_OBSERVABILITY_CHEATSHEET.md  DEPLOYMENT_OBSERVABILITY_DESIGN.md  DEPLOYMENT_OBSERVABILITY_IMPLEMENTATION.md  DEPLOYMENT_OBSERVABILITY_QUICKSTART.md  (+190 more)
.archive/: README_ARCHIVED_CONTENT.md
.archive/_backup_adapters/: knowledge_adapter.py  stream_adapter.py
.archive/src-legacy/: __init__.py  artifacts.py  batch.py  config.py  config_ui.py  corpus.py  costs.py  debate.py  env_utils.py  guardrails.py  judge.py  metadata.py  metrics.py  publish.py  queue_strategy.py  redaction.py  retries.py  run_workflow.py  storage.py  templates.py  version.py  webapi.py  webhooks.py
.archive/staging_artifacts_20251019_102102/: STAGING_SUMMARY.txt
.claude/: AGENT_CONSOLIDATION_SUMMARY.md  AGENT_ORCHESTRATION_README.md  INFRASTRUCTURE_AUDIT_CHECKLIST.md  settings.local.json
.claude/agents/: agent-deployment-monitor.md  anonymous-sessions-architect.md  auth-security.md  code-reviewer.md  connector-integrator.md  cost-optimizer.md  data-connector-architect.md  file-system-connector-specialist.md  frontend-performance.md  knowledge-retrieval-architect.md  memory-architect.md  multi-tenancy-architect.md  next-js-architect.md  observability-architect.md  project-historian.md  repo-guardian.md  safe-action-detector.md  security-reviewer.md  streaming-specialist.md  supabase-auth-security.md  tech-lead.md  ux-reviewer.md
.github/workflows/: auto-failure-detection.yml  backup.yml  ci.yml  deploy-beta.yml  deploy-full-stack.yml  deploy-prod.yml  deploy-staging.yml.disabled  deploy.yml  docker-build.yml  integration-docs-audit.yml  integration-docs-check.yml  nightly.yml  perf-baseline.yml  preview-deploy.yml  release.yml  rollout-nudge.yml  uptime.yml  verify-credentials.yml
PROJECT_HISTORY/: DOCUMENTATION_INDEX.md  PROJECT_INDEX.md  QUICK_REFERENCE.md  README.md
_backup_adapters/: knowledge_adapter.py  memory_adapter.py  stream_adapter.py
alembic/: env.py
alembic/versions/: 20251019_memory_schema_rls.py  (+1 more)
artifacts/: R2_STAGING_SMOKE_TEST_FINAL_REPORT.md
dashboards/: app.py  batch_tab.py  chat_tab.py  command_palette.py  home_tab.py  observability_app.py  observability_tab.py  templates_tab.py
docker/: docker-compose.yml
docs/: PHASE1_MVP_DEPLOYMENT_ANALYSIS.md  PHASE2A_UI_IMPLEMENTATION.md
observability/: ALERT_RULES.yml  PROMETHEUS_CONFIG.yml
relay-ai/: STRATEGY.md
relay_ai/: REORGANIZATION_PLAN.md
scripts/: alerts.py  api_keys_cli.py  approvals.py  backfill_redis_keys.py  batch_from_csv.py  blue_green_release.py  classification.py  complete_oauth.py  compliance.py  connectors.py  connectors_health.py  cost_report.py  delegation.py  deploy-all.sh  deploy_beta.sh  e2e_gmail_test.py  export_openapi.py  export_openapi_v2.py  generate_mime_samples.py  graph.py  invite_beta_users.py  keyring.py  lifecycle_run.py  manual_token_setup.py  manual_token_setup_ms.py  metrics_utils.sh  monitor-failures.sh  nl.py  outlook_send_smoke.py  r2_staging_smoke.py  reorganize.sh  restore_artifact.py  roles_cli.py  rollout_controller.py  run_dag_min.py  setup_supabase_beta.sql  staging_execution_guide.sh  staging_validate_knowledge_api.sh  start-server.sh  store_tokens.py  (+8 more)
src/: prefs.py  webapi.py
tests_e2e/: conftest.py  test_smoke.py
(+578 files in other folders)
